--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
-    "graph-data-structure": "^1.13.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-lineto": "^3.2.0",
@@ -16,8 +15,13 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --useStderr",
     "eject": "react-scripts eject"
+  },
+  "jest": {
+    "coverageReporters": [
+      "html"
+    ]
   },
   "eslintConfig": {
     "extends": [
