--- a/package.json
+++ b/package.json
@@ -1,19 +1,25 @@
 {
   "name": "js-traffic-sim",
   "version": "0.1.0",
+  "homepage": "http://jgmeyer.github.io/js-traffic-sim",
   "private": true,
   "dependencies": {
+    "-": "^0.0.1",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-lineto": "^3.2.0",
     "react-scripts": "4.0.1",
+    "save-dev": "^0.0.1-security",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test --useStderr",
     "eject": "react-scripts eject"
